feat: Add org-cv

--- a/.gitmodules
+++ b/.gitmodules
@@ -28,3 +28,6 @@
 [submodule "private/ob-julia"]
 	path = private/ob-julia
 	url = https://github.com/nico202/ob-julia.git
+[submodule "private/org-cv"]
+	path = private/org-cv
+	url = git@github.com:Maverobot/org-cv.git
